<resources>
    <string name="app_name">ObservatorioCiudadano</string>
    <string name="app_path_photo">/sdcard/ObservatorioCiudadano/</string>
    <string name="app_db_name">ObservatorioCiudadano.db</string>
    <string name="app_share_preference_name">ObservatorioCiudadano</string>
    <string name="network_ip">http://os.gshp-apps.com</string>
    <string name="network_context">service/rest/</string>
    <string name="user">user1</string>
    <string name="pass">54321</string>
    <string name="app_download_apk">https://s3-us-west-1.amazonaws.com/gshpapps/OBCiudadano/ObservatorioCiudadano.apk</string>
    <string name="app_path_apk">sdcard/ObservatorioCiudadano/ObservatorioCiudadano.apk</string>
    <string name="network_header_name_application_json">Content-Type</string>
    <string name="network_header_application_json">application/json</string>
    <string name="network_header_multipart_data">multipart/form-data</string>
    <string name="home_button_navigation_supervisor">SUPERVISOR</string>
    <string name="home_button_navigation_representative">REPRESENTANTE</string>
    <string name="home_button_navigation_visit">VISITAS</string>
    <string name="home_button_navigation_exit">SALIR</string>
    <string name="network_sc_conflict">Sincronización fallida, intentelo\nmás tarde</string>
    <string name="network_sc_precondition_failed">Su contraseña ha caducado,¡debe actualizarlo!</string>
    <string name="network_sc_unauthorized">Verificar credenciales.</string>
    <string name="network_no_content">Uds. no cuenta con la siguiente información</string>
    <string name="network_error">Error de red, verifique su conexión o intentelo más tarde</string>
    <string name="network_server_disable">El servidor se encuentra en mantenimiento, Intentelo más tarde</string>
    <string name="network_forbidden">Su cuenta ha sido desactivada</string>
    <string name="network_header_token">X-AUTH-TOKEN</string>
    <string name="app_share_preference_toke_webservices">token_web_services</string>
    <string name="app_share_preference_privacy_politic">privacy_politic</string>
    <string name="app_share_preference_time_synch">time_synch</string>
    <string name="app_share_preference_user_account">user_account</string>
    <string name="app_share_preference_user_pass">user_pass</string>
    <string name="app_share_preference_count_unauthorized">count_unauthorized</string>
    <string name="error_empty_user_name">Ingrese nombre de usuario</string>
    <string name="error_empty_password">Ingrese su contraseña</string>
    <string name="label_continue">CONTINUAR</string>
    <string name="label_exit">SALIR</string>
    <string name="label_finish">Finalizar</string>
    <string name="label_next">SIGUIENTE</string>
    <string name="label_accept">ACEPTAR</string>
    <string name="label_cancel">CANCELAR</string>
    <string name="label_into">ENTRAR</string>
    <string name="label_save">GUARDAR</string>
    <string name="label_created">GENERAR</string>
    <string name="label_account">CREDENCIALES</string>
    <string name="label_synck">SINCRONIZACIÓN</string>
    <string name="label_visit">VISITAS</string>
    <string name="label_station">CASILLAS</string>
    <string name="loggin_hint_user">Nombre de usuario</string>
    <string name="loggin_hint_pass">Contraseña</string>
    <string name="dialog_account_delete_data">Ha cambiado de usuario, todos los datos anteriores seran eliminados\n ¿Desea continuar?</string>
    <string name="dialog_account">CREDENCIALES</string>
    <string name="dialog_synch">SINCRONIZACIÓN</string>
    <string name="dialog_generic">GÉNERICO</string>
    <string name="dialog_update_error">No se pudo actualizar, favor de verivicar su conexion a red y vuelva a intentarlo</string>
    <string name="dialog_politics">TÉRMINOS Y CONDICIONES</string>
    <string name="dialog_update_title">ACTUALIZAR</string>
    <string name="dialog_change_password">CAMBIO DE CONTRASEÑA</string>
    <string name="dialog_change_password_actual">Contraseña Actual:</string>
    <string name="dialog_change_password_new">Contraseña Nueva:</string>
    <string name="dialog_change_password_confirm">Confirmar Contraseña:</string>
    <string name="dialog_change_password_btn">CAMBIAR</string>
    <string name="app_share_preference_first_synch">first_synch</string>
    <string name="report_check_dont_provider">dont provider</string>
    <string name="app_bundle_name">bundle</string>
    <string name="start">INICIO</string>
    <string name="initial_reco">TÓMATE LA FOTO</string>
    <string name="firs_step">Dar click en inicio</string>
    <string name="second_step">Tomar las 10 fotos\ncon las expresiones\nsolicitadas</string>
    <string name="third_step">Dar click en guardar\ne iniciar el recono-\ncimiento facial</string>
    <string name="add_address">Guardar direccion.</string>
    <string name="postal_code">Código Postal:</string>
    <string name="suburb">Colonia:</string>
    <string name="street">Calle:</string>
    <string name="street_left">Calle Izquierda:</string>
    <string name="street_right">Calle Derecha:</string>
    <string name="number_out">Número Exterior:</string>
    <string name="number_in">Número Inerior:</string>
    <string name="info_manual">No se pudo obtener dirección, favor de ingresarla manual.</string>
    <string name="title_info_manual">UBICACIÓN NO OBTENIDA</string>
</resources>