<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/style_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_dialog_shape">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/title_text_toolbar_style_dialog"
            android:text="@string/title_info_manual" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_top"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/info_manual" />

    <Button
        android:id="@+id/btn_agree"
        style="@style/style_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_info"
        android:text="@string/label_accept" />

</RelativeLayout>