<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/style_dialog"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_dialog_shape">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/title_text_toolbar_style_dialog"
            android:text="@string/dialog_change_password"
            android:textAlignment="center" />

    </android.support.v7.widget.Toolbar>

    <ProgressBar
        android:id="@+id/id_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:max="100"
        android:progress="1" />

    <TextView
        android:id="@+id/txtPorcent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:textSize="@dimen/sizeTextVeryBig" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_pass_actual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin_middle">

        <EditText
            android:id="@+id/edt_last_pss"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_change_password_actual"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/sizeTextBig" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_pass_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin_middle">

        <EditText
            android:id="@+id/edt_pss"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_change_password_new"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/sizeTextBig" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_pass_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin_middle">

        <EditText
            android:id="@+id/edt_pss_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_change_password_confirm"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="@dimen/sizeTextBig" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_next"
        style="@style/style_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/dialog_change_password_btn" />

</LinearLayout>