<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/wizard_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/backdrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop"
        app:layout_collapseMode="parallax"
        app:srcCompat="@drawable/fondo_p1" />

    <RelativeLayout
        android:id="@+id/bottom_part"
        android:layout_below="@+id/backdrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="16dp">

        <android.support.v7.widget.CardView
            android:id="@+id/float_card"
            android:layout_width="match_parent"
            android:elevation="5dp"
            app:cardCornerRadius="10dp"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_reco"
                    android:textColor="@color/black_text"
                    android:textSize="16sp"
                    android:layout_marginBottom="8dp"/>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:columnCount="5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/regla1"
                        android:textSize="10sp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/firs_step"
                        android:textColor="@color/light_text"
                        android:layout_marginRight="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/regla2"
                        android:textSize="10sp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/second_step"
                        android:textColor="@color/light_text"
                        android:layout_marginRight="8dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/regla3"
                        android:textSize="10sp"
                        android:text="@string/third_step"
                        android:textColor="@color/light_text" />
                </GridLayout>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/basic_button"
            android:paddingEnd="32dp"
            android:paddingStart="32dp"
            android:text="@string/start"
            android:textColor="#fff"
            android:textSize="14sp"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</RelativeLayout>